tests/Spire.SourceGenerators.Tests/FieldAccess/cases/Warn_NoGuard.cs
//@ should_fail
// SPIRE014: accessing variant field without tag guard
using Spire;
namespace TestNs
{
    [DiscriminatedUnion]
    partial struct Shape
    {
        [Variant] public static partial Shape Circle(double radius);
        [Variant] public static partial Shape Square(int sideLength);
    }
    class C
    {
        double Test(Shape s) => s.radius; //~ ERROR
    }
}
